- It is now possible to  read reference types by dereferencing them as
  numpy array of objects (closes :issue:`518` and :issue:`519`).
  Thanks to Ehsan Azar
- It is now also possible to use HDF5 with the new shared library naming
  scheme (>= 1.8.10, hdf5.dll instead of hdf5dll.dll) on Windows (:issue:`540`).
- Internal Blosc version updated to 1.8.1 (closes :issue:`541`)
- Get rid of the `-native` compile flag (closes :issue:`503`)


Bugs fixed
----------

- Only run `tables.tests.test_basics.UnicodeFilename` if the filesystem
  encoding is utf-8. Closes :issue:`485`.
- Fix segmentation fault in a number of test cases that use
  :class:`index.Index` (closes :issue:`532` and :issue:`533`).
  Thanks to Diane Trout.
- Fixed the evaluation of transcendental functions when numexpr is
  compiled with VML support (closes :issue:`534`, PR #536).
  Thanks to Tom Kooij.
- Make sure that index classes use buffersizes that are a multiple
  of chunkshape[0] (closes :issue:`538`, PR #538).
  Thanks to Tom Kooij.


Other changes
-------------

- Minimum Cython_ version is now v0.21


.. _Cython: http://cython.org


Changes from 3.2.1.1 to 3.2.2
=============================

Bug fixed
---------

- Fix AssertionError in Row.__init_loop. See :issue:`477`.
- Fix issues with Cython 0.23. See :issue:`481`.
- Only run `tables.tests.test_basics.UnicodeFilename` if the filesystem
  encoding is utf-8. Closes :issue:`485`.
- Fix missing missing PyErr_Clear. See :issue:`#486`.
- Fix the C type of some numpy attributes. See :issue:`494`.
- Cast selection indices to integer. See :issue:`496`.
- Fix indexesextension._keysort_string. Closes :issue:`497` and :issue:`498`.


Changes from 3.2.1 to 3.2.1.1
=============================

- Fix permission on distributed source distribution


Changes from 3.2.0 to 3.2.1
===========================

Bug fixed
---------

- Fix indexesextension._keysort. Fixes :issue:`455`. Thanks to Andrew Lin.


Changes from 3.1.1 to 3.2.0